# toymc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
cmake/: FindCheck.cmake
include/: timer.h
scripts/: install-check.sh
src/: CMakeLists.txt  error.c  errors.h  files.c  files.h  geometry.c  geometry.h  input_file.c  input_file.h  input_file_parser.c  input_file_parser.h  lexer.c  lexer.h  main.c  param_file.c  param_file.h  param_file_objects.c  param_file_objects.h  param_file_parser.c  param_file_parser.h  pcg32.c  pcg32.h  potentials.c  potentials.h  simulation_parameters.c  simulation_parameters.h  timer.h  xyz_parser.c  xyz_parser.h
tests/: CMakeLists.txt  main.c.in  test_dummy_input.inp  tests.h  tests.h.in  tests_lexer.c  tests_param_file.c  tests_param_file_objects.c  tests_param_file_parser.c  tests_simulation_parameters.c
tests/tests_input_file/: CMakeLists.txt  tests_input_file.c
tests/tests_input_file_parser/: CMakeLists.txt  tests_input_file_parser.c
tests/tests_lexer/: main.c
tests/tests_param_file/: CMakeLists.txt  tests_param_file.c
tests/tests_param_file_objects/: main.c
tests/tests_param_file_parser/: CMakeLists.txt  main.c  tests_param_file_parser.c
tests/tests_potentials/: main.c
tests/tests_simulation_parameters/: CMakeLists.txt  main.c  test_dummy_input.inp  tests_simulation_parameters.c
tests/tests_xyz_parser/: main.c  test_dummy_geom.xyz
